# bisect-find-first-bad

./: .pre-commit-config.yaml  README.md  bisect_find.py  bisect_find_first_bad.py  bisectlib.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
tests/: main_test.py  test_main.py
